--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
+    background-image: url("img/la-chouette-agence-banniere_c.jpg");
 }
 
 .bg-presentation {
@@ -1042,17 +1042,10 @@ h4 {
 }
 .accessibility
 {
-    position: absolute;
-    left:-9999em;
+    display: none;
 
 }
 
-/* .bloc .bgc-atomic-tangerine .d-bloc */
-#bloc-8
-{
-    position: relative;
-
-}
 
 .grey
 {
