--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    /* margin-right: -16px; */
     float: right;
     z-index: 1;
 }
@@ -775,7 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: #FFF7BA!important;
+    color: #1E1C15!important;
 }
 
 .btn-atomic-tangerine {
@@ -829,6 +829,7 @@ h4 {
     .bloc {
         padding-left: 20px;
         padding-right: 20px;
+        width: auto;
     }
     .bloc.full-width-bloc,
     .bloc-tile-2.full-width-bloc .container,
