correction fichier image de presentation

--- a/style.css
+++ b/style.css
@@ -960,7 +960,7 @@ body {
   }
   
   .bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation_c.png");
   }
   
   .image-resize-mode {
